syntax = "proto3";

package billing;

service BillingService {
  // Invoice CRUD operations
  rpc CreateInvoice (CreateInvoiceRequest) returns (InvoiceResponse);
  rpc GetInvoiceById (InvoiceIdRequest) returns (InvoiceResponse);
  rpc GetAllInvoices (PaginationRequest) returns (PaginatedInvoiceListResponse);
  rpc GetInvoicesByCustomer (CustomerPaginationRequest) returns (PaginatedInvoiceListResponse);
  rpc GetInvoicesBySubscription (SubscriptionPaginationRequest) returns (PaginatedInvoiceListResponse);
  rpc UpdateInvoiceStatus (UpdateInvoiceStatusRequest) returns (InvoiceResponse);
  rpc RetryPayment (InvoiceIdRequest) returns (MessageResponse);
}

// Common messages
message Empty {}

message MessageResponse {
  string message = 1;
  bool success = 2;
}

// Pagination request
message PaginationRequest {
  int32 page = 1;
  int32 limit = 2;
  bool includeCancelled = 3;
}

message CustomerPaginationRequest {
  int32 customerId = 1;
  int32 page = 2;
  int32 limit = 3;
  bool includeCancelled = 4;
}

message SubscriptionPaginationRequest {
  int32 subscriptionId = 1;
  int32 page = 2;
  int32 limit = 3;
  bool includeCancelled = 4;
}

// Invoice Item
message InvoiceItem {
  int32 productId = 1;
  string description = 2;
  int32 quantity = 3;
  double unitPrice = 4;
  double totalPrice = 5;
}

// Invoice messages
message Invoice {
  int32 id = 1;
  string invoiceNumber = 2;
  int32 orderId = 3;
  string orderNumber = 4;
  int32 subscriptionId = 5;
  string invoiceType = 6;
  int32 customerId = 7;
  string status = 8;
  double subtotal = 9;
  double tax = 10;
  double shippingCost = 11;
  double discount = 12;
  double totalAmount = 13;
  double paidAmount = 14;
  double dueAmount = 15;
  string dueDate = 16;
  string notes = 17;
  string issuedAt = 18;
  string paidAt = 19;
  string periodStart = 20;
  string periodEnd = 21;
  repeated InvoiceItem items = 22;
  string createdAt = 23;
  string updatedAt = 24;
}

message CreateInvoiceRequest {
  int32 orderId = 1;
  string orderNumber = 2;
  int32 customerId = 3;
  repeated InvoiceItem items = 4;
  double subtotal = 5;
  double tax = 6;
  double shippingCost = 7;
  double discount = 8;
  double totalAmount = 9;
  string dueDate = 10;
  string notes = 11;
  string billingPeriod = 12;
  string businessModel = 13;
}

message InvoiceIdRequest {
  int32 id = 1;
}

message InvoiceResponse {
  Invoice invoice = 1;
}

message InvoiceListResponse {
  repeated Invoice invoices = 1;
}

message PaginatedInvoiceListResponse {
  repeated Invoice invoices = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 totalPages = 5;
}

message UpdateInvoiceStatusRequest {
  int32 id = 1;
  string status = 2;
}

message CustomerIdRequest {
  int32 customerId = 1;
}

message SubscriptionIdRequest {
  int32 subscriptionId = 1;
}
